<resources>
    <string name="app_name">homework_2.19</string>
    <string name="product">Product</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="customer">Customer</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="totalPrice">Total price</string>
    <string name="info">Info</string>
    <string name="warning">Incorrect value</string>
</resources>
