<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homework_219.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="@dimen/textSize"
            android:id="@+id/product" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textAlignment="textEnd"
            android:inputType="textPersonName"
            android:hint="@string/product"
            android:ems="10"
            android:id="@+id/editProduct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer"
            android:textSize="@dimen/textSize"
            android:id="@+id/manufacturer" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textAlignment="textEnd"
            android:inputType="textPersonName"
            android:hint="@string/manufacturer"
            android:ems="10"
            android:id="@+id/editManufacturer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textSize="@dimen/textSize"
            android:id="@+id/customer"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textAlignment="textEnd"
            android:inputType="textPersonName"
            android:hint="@string/customer"
            android:ems="10"
            android:id="@+id/editCustomer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/textSize"
            android:id="@+id/quantity"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textAlignment="textEnd"
            android:inputType="numberSigned"
            android:hint="@string/quantity"
            android:ems="10"
            android:id="@+id/editQuantity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/textSize"
            android:id="@+id/price"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textAlignment="textEnd"
            android:inputType="numberSigned"
            android:hint="@string/price"
            android:ems="10"
            android:id="@+id/editPrice" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPrice"
            android:textSize="@dimen/textSize"
            android:layout_weight="0.25"
            android:id="@+id/totalPrice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textSize="@dimen/textSize"
            android:textAlignment="textEnd"
            android:id="@+id/totalPriceValue"/>

    </LinearLayout>

    <Button
        android:text="@string/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info" />
</LinearLayout>
